--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="cabecalho__icones">
                 <div class="avatar__usuario">
-                    <a href="./login.html"><i class="fa fa-user-circle-o fa-3x icone__cor" aria-hidden="true"></i></a>
+                    <button onclick="navegar()" class="button__Avatar"><i class="fa fa-user-circle-o fa-4x icone__cor" aria-hidden="true"></i></button>
                     <span class="nome__login"></span>
                 </div>
                 <a href="./favoritos.html"><i class="fa fa-heart-o fa-3x icone__cor" aria-hidden="true"></i></a>
